--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen from ur loved once</title>
+  <title>CodePen - A Pen from ur bhai</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,24 +12,22 @@
 <!-- partial:index.partial.html -->
 <!--
 
-
-
 -->
 
 <div class="carousel">
     <div class="carousel-item">
         <div class="carousel-box">
-            <div class="title">Hi 👋</div>
+            <div class="title">assalamu alikum bhai 👋</div>
             <div class="num">01</div>
-			<img src="teo9.jpg" />
+			<img src="bhai12.jpg" />
         </div>
     </div>
 
     <div class="carousel-item">
         <div class="carousel-box">
-            <div class="title">I want to tell you Something 😍</div>
+            <div class="title">I just want to say Something 👉🏻👈🏻</div>
             <div class="num">02</div>
-			<img src="teo0.jpg" />
+			<img src="bhai8.jpg" />
         </div>
     </div>
 
@@ -37,65 +35,67 @@
         <div class="carousel-box">
             <div class="title">Please Keep Dragging 😊 </div>
             <div class="num">03</div>
-			<img src="teo4.jpg" />
+			<img src="bhai11.jpg" />
         </div>
     </div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">You are Amazing 🤩 </div>
+			<div class="title">ladkiya dekye ke paagal hojatey🤩 </div>
 			<div class="num">04</div>
-			<img src="teo5.jpg" />
+			<img src="bhai6.jpg" />
         </div>
 	</div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">Most Beautiful Person on Earth 💯</div>
+			<div class="title"> bhai plz sun ke nichey bhait kye call nakko bath karo </div>
 			<div class="num">05</div>
-			<img src="teo7.jpg" />
+			<img src="bhai5.jpg" />
         </div>
 	</div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">And Cutest 🎀</div>
+			<div class="title">aapki Cuteness ki raz kya hai?? 🎀</div>
 			<div class="num">06</div>
-			<img src="teo8.jpg" />
+			<img src="bhai4.jpg" />
         </div>
 	</div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">And Since i met You 😗 </div>
+			<div class="title">dekho maam bhi kitti mohobath se bath karrey </div>
 			<div class="num">07</div>
-			<img src="teo13.jpg" />
+			<img src="bhai3.jpg" />
         </div>
 	</div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">I feel very Lucky Everyday 😇</div>
+			<div class="title">maam ich call karey naa sahi bolo??</div>
 			<div class="num">08</div>
-			<img src="teo11.jpg" />
+			<img src="bhai7.jpg" />
         </div>
 	</div>
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">and I have Crush on You 🥰</div>
+			<div class="title">kabhi hamey bhi mohobath se khilav aapbhi 🥰</div>
 			<div class="num">09</div>
-			<img src="teo14.jpg" />
+			<img src="bhai9.jpg" />
         </div>
 	</div>
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">I love You ❤️</div>
+			<div class="title">aap kaisey bhi hoo i just want to say skyoff dear❤️</div>
 			<div class="num">10</div>
-			<img src="teo12.jpg" />
+			<img src="bhai2.jpg" />
         </div>
 	</div>
 </div>
+
+
 
 
 <div class="cursor"></div>
