--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title"> bhai plz sun ke nichey bhait kye call nakko bath karo </div>
+			<div class="title"> bhai plz sun ke nichey bhait kye call nakko bath karo🤌🏻 </div>
 			<div class="num">05</div>
 			<img src="bhai5.jpg" />
         </div>
@@ -65,7 +65,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">dekho maam bhi kitti mohobath se bath karrey </div>
+			<div class="title">dekho maam bhi kitti mohobath se bath karrey💞 </div>
 			<div class="num">07</div>
 			<img src="bhai3.jpg" />
         </div>
@@ -73,7 +73,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">maam ich call karey naa sahi bolo??</div>
+			<div class="title">maam ich call karey naa sahi bolo??😜</div>
 			<div class="num">08</div>
 			<img src="bhai7.jpg" />
         </div>
